create animal crud and adjust avatar atributes
